version/stable/_sources/api/ansys/mechanical/stubs/v252/Ansys/ACT/Automation/Mechanical/CondensedPartExpansionState.rst.txt
.. vale off



:class:`CondensedPartExpansionState`
====================================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.ACT.Automation.Mechanical.CondensedPartExpansionState

   Bases: :py:obj:`object`



.. py:currentmodule:: CondensedPartExpansionState

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~ToString`
            - ToString method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Displacement`
            - Gets or sets the Displacement Property
          * - :py:attr:`~Stress`
            - Gets or sets the Stress Property







Property detail
---------------
.. py:property:: Displacement
   :type: Optional[bool]


   
   Gets or sets the Displacement Property
















   ..
       !! processed by numpydoc !!

.. py:property:: Stress
   :type: Optional[bool]


   
   Gets or sets the Stress Property
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Equals(obj: Any) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!



.. vale on